# AOJ

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
ALDS1/1/: A.rb  B.rb  C.rb
ITP1/1/: B.go  B.kt  BUILD.bazel  C.go  D.go
ITP1/1/A/: BUILD.bazel
ITP1/1/B/: BUILD.bazel
ITP1/1/C/: BUILD.bazel  C.kt
ITP1/1/D/: BUILD.bazel  D.go  D.kt
ITP1/10/: a.rb
ITP1/2/: A.go  A.kt  B.go  B.kt  BUILD.bazel  D.kt
ITP1/2/A/: A.go  BUILD.bazel
ITP1/2/B/: B.go  BUILD.bazel
ITP1/2/C/: BUILD.bazel  C.go  C.kt
ITP1/2/D/: BUILD.bazel  D.go
ITP1/3/: B.kt  D.kt
ITP1/3/A/: A.kt
ITP1/3/C/: C.kt
ITP1/4/: B.kt  C.kt
ITP1/4/A/: A.kt
ITP1/7/: a.rb  b.rb  c.rb  d.rb
ITP1/8/: a.rb  b.rb  c.rb  d.rb
ITP1/9/: a.rb  b.rb  c.rb  d.rb
