load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "A.go",
        "B.go",
        "C.go",
        "D.go",
    ],
    importpath = "github.com/gkuga/AOJ/ITP1/2",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "2",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
