load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["C.go"],
    importpath = "github.com/gkuga/AOJ/ITP1/1/C",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "C",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
