load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["B.go"],
    importpath = "github.com/gkuga/AOJ/ITP1/2/B",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "B",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
